--- a/.tmux.conf
+++ b/.tmux.conf
@@ -174,12 +174,14 @@ bind -n M-Down select-pane -D
 
 # new window and retain cwd
 bind -r C new-window -c "#{pane_current_path}"
+# New panel in largest pannel
+bind t run "[[ $(($(tmux display -p '8*#{pane_width}-20*#{pane_height}'))) -lt 0 ]] && tmux command-prompt -p \"Open pane large with command:\" \"splitw -v -c '#{pane_current_path}' '%%'\" || tmux command-prompt -p \"Open large pane with command:\" \"splitw -h -c '#{pane_current_path}' '%%'\""
 
 # Rename session and window
 bind r command-prompt -I "#{window_name}" "rename-window '%%'"
 bind R command-prompt -I "#{session_name}" "rename-session '%%'"
 
-# Select pane and windows
+# Select windows
 bind -r C-right previous-window
 bind -r C-left next-window
 
@@ -327,9 +329,21 @@ if-shell 'test -n "$SSH_CLIENT"' \
 # Theme
 ###############################################################################
 
+# TODO
+# Public IP bottom right
+# ping to 1.1.1.1 or 8.8.8.8
+
+# Get tmux window size
+# [[ $(($(tput cols) * 8)) -lt $(($(tput lines) * 20)) ]] && echo Rows$(tput cols)-$(tput lines) || echo Cols$(tput cols)-$(tput lines)
+# $(tmux display -p '#{pane_width}-#{pane_height}')
+# tmux display-message -p '#{pane_height}'
+
 
 
 # status bar theme
+
+#Status refresh rate
+set -g status-interval 5
 
 set -g status-bg 'colour235'
 set -g message-command-fg 'colour222'
@@ -360,8 +374,8 @@ setw -g window-status-activity-fg 'colour154'
 
 setw -g window-status-separator '+'
 setw -g window-status-bg 'colour235'
-set -g status-left '#[fg=colour232,bg=colour154] #S #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #W #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] #(whoami)  #(uptime  | cut -d " " -f 1,2,3) #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
-set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] %r  %M  %Y #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #H #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]'
+set -g status-left '#[fg=colour232,bg=colour154] #S #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #W #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235]   #(uptime  | cut -d " " -f 1,2,3) #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
+set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] %r  %M  %Y #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238]#(whoami)@#H #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]'
 setw -g window-status-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
 setw -g window-status-current-format '#[fg=colour235,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #I > [#W]#[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]'
 
