Before restore backup

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,7 @@
 # tmux rename-session -t 0 MainSession
 # printf '\033]2;%s\033\\' 'title goes here'  
 # tmux display-message -p '#S' # session name
+#  tmux list-panes -s -F '#{window_index} #{pane_index} #{pane_current_path}' Show indexs but not realy a list of panes...
 #
 # To select text with mouse, press shift !
 ###################
@@ -32,10 +33,12 @@
 # https://jamesoff.net/2017/08/26/tmux-configuration.html
 # Tmux sessions
 #   local : 
+        sudo : for apt and config
 #   remote :
 #   fullscreen :
+#   halfscreen : for yakuake 
 #   shared : 
-#       htop
+#       htop log
 #
 # tmux template
 #   log : journalctl, tail -f /var/log/??
@@ -174,7 +177,7 @@ bind -n M-Down select-pane -D
 
 # new window and retain cwd
 bind -r C new-window -c "#{pane_current_path}"
-# New panel in largest pannel
+# New panel in largest pannel #NOT WORKING ??? TO FIX
 bind t run "[[ $(($(tmux display -p '8*#{pane_width}-20*#{pane_height}'))) -lt 0 ]] && tmux command-prompt -p \"Open pane large with command:\" \"splitw -v -c '#{pane_current_path}' '%%'\" || tmux command-prompt -p \"Open large pane with command:\" \"splitw -h -c '#{pane_current_path}' '%%'\""
 
 # Rename session and window
