first merge of new and old dotfiles

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -342,6 +342,9 @@ if-shell 'test -n "$SSH_CLIENT"' \
 # tmux display-message -p '#{pane_height}'
 
 
+# TODO 
+# STATUS BAR FOR TOP IF IN NESTED TMUX
+# DETECT NESTED TMUX
 
 # status bar theme
 
