fix a few errors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,7 +33,7 @@
 # https://jamesoff.net/2017/08/26/tmux-configuration.html
 # Tmux sessions
 #   local : 
-        sudo : for apt and config
+#        sudo : for apt and config
 #   remote :
 #   fullscreen :
 #   halfscreen : for yakuake 
@@ -185,8 +185,8 @@ bind r command-prompt -I "#{window_name}" "rename-window '%%'"
 bind R command-prompt -I "#{session_name}" "rename-session '%%'"
 
 # Select windows
-bind -r C-right previous-window
-bind -r C-left next-window
+bind -r C-left previous-window
+bind -r C-right next-window
 
 # Link window ??
 bind L command-prompt -p "Link window from (session:window): " "link-window -s %% -a"
