--- a/.tmux.conf
+++ b/.tmux.conf
@@ -214,7 +214,18 @@ bind D if -F '#{session_many_attached}' \
     
 # Renew environment
 bind '$' run "~/.tmux/renew_env.sh"
-     
+
+
+# https://mutelight.org/practical-tmux
+# C-a C-a for the Last Active Window
+bind-key C-a last-window
+
+# Command Sequence for Nested Tmux Sessions
+bind-key a send-prefix
+
+# Faster Command Sequences https://mutelight.org/practical-tmux
+set -s escape-time 0
+    
 ###############################################################################
 # Display
 ###############################################################################
@@ -231,6 +242,8 @@ set -g display-panes-time 800 # slightly longer pane indicators display time
 set -g display-time 1300      # slightly longer status messages display time
 
 set -g status-interval 10     # redraw status line every 10 seconds
+
+setw -g aggressive-resize on # https://mutelight.org/practical-tmux
 
 # clear both screen and history
 bind -n C-l send-keys C-l \; run 'sleep 0.1' \; clear-history
@@ -386,6 +399,8 @@ setw -g window-status-format '#[fg=colour235,bg=colour235,nobold,nounderscore,no
 setw -g window-status-current-format '#[fg=colour235,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #I > [#W]#[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]'
 
 
+###############################################################################
+# Window groupes
+###############################################################################
 
-
-
+new-session -s yakuake -t $HOSTNAME
