--- a/.tmux.conf
+++ b/.tmux.conf
@@ -262,7 +262,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # Prompt to rename window right after it's created
-set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
+#set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
 
 
 
@@ -403,4 +403,11 @@ setw -g window-status-current-format '#[fg=colour235,bg=colour238,nobold,nounder
 # Window groupes
 ###############################################################################
 
-new-session -s yakuake -t $HOSTNAME
+#new-session -s yakuake -t $HOSTNAME
+
+
+###############################################################################
+# Plugins
+###############################################################################
+# mkdir -p $HOME/github/; cd $HOME/github; git clone https://github.com/tmux-plugins/tmux-resurrect
+#run-shell ~/github/tmux-resurrect/resurrect.tmux
