--- a/.tmux.conf
+++ b/.tmux.conf
@@ -364,35 +364,26 @@ if-shell 'test -n "$SSH_CLIENT"' \
 #Status refresh rate
 set -g status-interval 5
 
-set -g status-bg 'colour235'
-set -g message-command-fg 'colour222'
 set -g status-justify 'centre'
 set -g status-left-length '100'
 set -g status 'on'
-set -g message-bg 'colour238'
 set -g status-right-length '100'
-set -g status-right-attr 'none'
-set -g message-fg 'colour222'
-set -g message-command-bg 'colour238'
-set -g status-attr 'none'
+set -g status-right-style 'none'
+set -g message-style bg='colour238',fg='colour222'
+set -g message-command-style fg='colour222',bg='colour238'
+set -g status-style bg='colour235','none'
 #set -g status-utf8 'on'
 #set -g pane-border-fg 'colour238'
 # pane divider color; non active pane
-set -g pane-border-fg default
-set -g pane-border-bg default
+set -g pane-border-style fg=default,bg=default
 # helps when you have more than two panes.
-set -g pane-active-border-fg 'colour154'
-set -g pane-active-border-bg default
+set -g pane-active-border-style fg='colour154',bg=default
     
-set -g status-left-attr 'none'
-setw -g window-status-fg 'colour121'
-setw -g window-status-attr 'none'
-setw -g window-status-activity-bg 'colour235'
-setw -g window-status-activity-attr 'none'
-setw -g window-status-activity-fg 'colour154'
+set -g status-left-style 'none'
+setw -g window-status-activity-style bg='colour235','none',fg='colour154'
 
 setw -g window-status-separator '+'
-setw -g window-status-bg 'colour235'
+setw -g window-status-style fg='colour121','none',bg='colour235'
 set -g status-left '#[fg=colour232,bg=colour154] #S #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #W #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235]   #(uptime  | cut -d " " -f 1,2,3) #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
 set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] %r  %M  %Y #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238]#(whoami)@#H #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]'
 setw -g window-status-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
