lots of work on tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,7 @@
 # C-a d         detach from session
 # C-a $         rename the current session
 # C-a s         choose a session from a list
+# C-a x         kill current session
 ## WINDOWS ###
 #C-a c          create a new window
 #C-a 1 ...      switch to window 1, ..., 9, 0
@@ -25,6 +26,8 @@
 #C-a n          next window
 #C-a l          ‘last’ (previously used) window
 #C-a w          choose window from a list
+#C-a -          split horizontal
+#C-a |          split vertical
 #TMUX COLORS : https://superuser.com/questions/285381/how-does-the-tmux-color-palette-work
 #
 # sharex windows : http://blog.tekerson.com/2013/05/28/share-tmux-windows-across-sessions/
@@ -50,6 +53,13 @@
 # attatch to local session; -d to detach from elsewhere
 # tmux attach-session -t local
 ##############################################################################
+
+
+# TODO
+# PASTE ON RIGHT CLICK
+# Check where it's run and rename session accordingly
+
+
 
 # COLORS
 
@@ -310,6 +320,29 @@ bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
 
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+
+#https://stackoverflow.com/questions/31404140/can-i-use-double-click-to-select-and-copy-in-tmux
+# Double LMB Select & Copy (Word)
+bind-key -T copy-mode-vi DoubleClick1Pane \
+    select-pane \; \
+    send-keys -X select-word-no-clear \; \
+    send-keys -X copy-pipe-no-clear "xclip -in -sel primary | xclip -i -selection clipboard"
+bind-key -n DoubleClick1Pane \
+    select-pane \; \
+    copy-mode -M \; \
+    send-keys -X select-word \; \
+    send-keys -X copy-pipe-no-clear "xclip -in -sel primary | xclip -i -selection clipboard"
+
+# Triple LMB Select & Copy (Line)
+bind-key -T copy-mode-vi TripleClick1Pane \
+    select-pane \; \
+    send-keys -X select-line \; \
+    send-keys -X copy-pipe-no-clear "xclip -in -sel primary | xclip -i -selection clipboard"
+bind-key -n TripleClick1Pane \
+    select-pane \; \
+    copy-mode -M \; \
+    send-keys -X select-line \; \
+    send-keys -X copy-pipe-no-clear "xclip -in -sel primary | xclip -i -selection clipboard"
 
 ###############################################################################
 # Nested sessions
