--- a/.tmux.conf
+++ b/.tmux.conf
@@ -87,7 +87,9 @@ color_window_off_status_bg="colour238"
 color_window_off_status_current_bg="colour254"
 
 
-set -g default-terminal "screen-256color" # colors!
+#set -g default-terminal "screen-256color" # colors!
+set -g default-terminal "rxvt-unicode-256color"
+
 setw -g xterm-keys on
 set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
